--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,9 @@ html, body {
 
 /* Verhindere horizontales Scrollen nur auf mobilen Geräten */
 @media (max-width: 768px) {
-    html, body, div, section, main, nav, footer, .container, .container-fluid, .row, .col, .col-md-3, .col-lg-4 {
+    html, body {
         overflow-x: hidden !important;
         max-width: 100vw !important;
-        width: 100% !important;
     }
 }
 
@@ -800,31 +799,8 @@ footer a:hover {
     }
     
     /* Verhindere horizontales Scrollen auf wichtigen Elementen */
-    .container, .container-fluid, .row {
-        max-width: 100vw !important;
-        overflow-x: hidden !important;
-    }
-    
     .container, .container-fluid {
         max-width: 100vw !important;
-        overflow-x: hidden !important;
-        padding-left: 16px !important;
-        padding-right: 16px !important;
-        width: 100% !important;
-        margin-left: 0 !important;
-        margin-right: 0 !important;
-    }
-    
-    /* Spezielle Regeln für Bootstrap-Grid */
-    .row {
-        margin-left: 0 !important;
-        margin-right: 0 !important;
-        max-width: 100vw !important;
-        overflow-x: hidden !important;
-    }
-    
-    .col, .col-md-3, .col-lg-4 {
-        max-width: 100% !important;
         overflow-x: hidden !important;
     }
     
@@ -910,10 +886,7 @@ footer a:hover {
 }
 
 @media (max-width: 600px) {
-    .container, .container-fluid {
-        max-width: 100vw !important;
-        overflow-x: hidden !important;
-    }
+    /* Mobile-spezifische Anpassungen ohne aggressive Overflow-Regeln */
     
     .category-grid .row {
         margin-left: -4px;
@@ -1006,10 +979,7 @@ footer a:hover {
 }
 
 @media (max-width: 414px) {
-    .container, .container-fluid {
-        max-width: 100vw !important;
-        overflow-x: hidden !important;
-    }
+    /* Mobile-spezifische Anpassungen ohne aggressive Overflow-Regeln */
     
     .category-grid .col,
     .category-grid .col-md-3 {
@@ -1138,10 +1108,7 @@ footer a:hover {
 }
 
 @media (max-width: 375px) {
-    .container, .container-fluid {
-        max-width: 100vw !important;
-        overflow-x: hidden !important;
-    }
+    /* Mobile-spezifische Anpassungen ohne aggressive Overflow-Regeln */
     
     .category-grid .col,
     .category-grid .col-md-3 {
