--- a/styles.css
+++ b/styles.css
@@ -1314,7 +1314,7 @@ footer a:hover {
         position: sticky;
         top: 0;
         z-index: 1;
-        margin-top: 10px;
+        margin-top: 0;
     }
     
     .cart-dropdown-header h6 {
